# qt6-dev

./: README.md
build-test4-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  inventory.txt  test4
build-test4-Desktop_Qt_6_2_4_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
build-test4-Desktop_Qt_6_2_4_GCC_64bit-Debug/test4_autogen/: deps
build-threads1-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  threads1
build-threads2-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  threads2
build-threads3-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  threads3
build-threads4-Desktop_Qt_6_2_4_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  threads4
conc1/: CMakeLists.txt
test/: a.cpp  a.out
test1/: CMakeLists.txt  main.cpp
test2/: CMakeLists.txt  main.cpp
test3/: CMakeLists.txt  main.cpp  test.cpp  test.h
test4/: CMakeLists.txt  inventory.cpp  inventory.h  main.cpp
threads1/: CMakeLists.txt  main.cpp  test.cpp
threads2/: CMakeLists.txt  counter.cpp  counter.h  main.cpp  manager.cpp
threads3/: CMakeLists.txt  counter.cpp  main.cpp
threads4/: CMakeLists.txt  counter.cpp  counter.h  main.cpp
threads5/: CMakeLists.txt  consumer.cpp  consumer.h  main.cpp  producer.cpp
threads6/: CMakeLists.txt  main.cpp  widget.cpp
(+240 files in other folders)
